# hadron

./: .gitignore  .gitmodules  .rustfmt.toml  CMakeLists.txt  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  FUZZING.md  README.md  README_LINUX.md  README_MACOS.md  README_WINDOWS.md  RELEASE_NOTES.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: fuzzer-findings-bug.md
.github/workflows/: actions.yml  linter.yml  test-coverage.yml  test-linux-qemu-aarch64.yml  test-linux-x86_64.yml  test-macos-x86_64.yml  test-windows-x86_64.yml  ubuntu-cargo-ci.yml  (+3 more)
doc/: Bibliography.md  Differences-Between-Hadron-and-LSC.md  Garbage-Collector-Notes.md  Grammar.md  Hadron-Compilation-Stages.md  Hadron-Grammer-Extensions.md  Hadron-LSP-Extensions.md  Hadron-Object-System.md  Hadron-Requirements.md  Hadron-Stack-Frame.md  Lexer-Design-Notes.md  Project-Structure-Notes.md  SCLang-To-LLVM.md
docs/: developer_guide.md  fuzzing.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: lex.rs  tokenized_buffer.rs
src/: Assembler.rl  Assembler_unittests.cpp  Block.cpp  Block.hpp  BlockSerializer.cpp  BuildInfo.hpp.in  CMakeLists.txt  ClassLibrary.cpp  ClassLibrary.hpp  CodeGenerator.cpp  CodeGenerator.hpp  Compiler.cpp  CompilerContext.cpp  Emitter.cpp  ErrorReporter.cpp  ErrorReporter.hpp  ErrorReporter_unittests.cpp  FileSystem.hpp  Function.cpp  HIR.cpp  HIR.hpp  Hash.cpp  Interpreter.cpp  JITMemoryArena.cpp  LLVM.hpp  Lexer.cpp  Lexer.cpp.old  Lexer.hpp  Lexer.rl  Lexer_unittests.cpp  Lifetime.cpp  LifetimeAnalyzer.cpp  LifetimeInterval.cpp  LifetimeInterval_unittests.cpp  Lifetime_unittests.cpp  LighteningJIT.cpp  LightningJIT.cpp  LightningJIT.hpp  Literal.hpp  MachineCodeRenderer.cpp  (+39 more)
src/compiler/: Assembler_unittests.cpp  BlockBuilder.cpp  CMakeLists.txt  Emitter.cpp  ErrorReporter.cpp  HIR.cpp  Hash.cpp  Heap.cpp  Interpreter.cpp  LSBHashTable_unittests.cpp  Lexer.rl  Lexer_unittests.cpp  LifetimeAnalyzer.cpp  LighteningJIT.cpp  MoveScheduler_unittests.cpp  Page.cpp  Parser.yy  Parser_unittests.cpp  RegisterAllocator.cpp  ThreadContext.cpp  VirtualJIT.cpp  hashkw.cpp  schema.cpp
src/compiler/include/hadron/: Assembler.hpp  BlockBuilder.hpp  BlockSerializer.hpp  Emitter.hpp  ErrorReporter.hpp  Function.hpp  HIR.hpp  Hash.hpp  Heap.hpp  JIT.hpp  JITMemoryArena.hpp  LSBHashTable.hpp  Lexer.hpp  LifetimeAnalyzer.hpp  LifetimeInterval.hpp  LighteningJIT.hpp  LinearBlock.hpp  Page.hpp  Parser.hpp  RegisterAllocator.hpp  Resolver.hpp  Schema.hpp  Slot.hpp  SourceFile.hpp  ThreadContext.hpp  Token.hpp  Type.hpp  VirtualJIT.hpp
src/hadron/: AST.hpp  ASTBuilder.cpp  ASTBuilder.hpp  Arch.hpp  Block.cpp  Block.hpp  BlockBuilder.cpp  BlockBuilder.hpp  BlockBuilder_unittests.cpp  BlockSerializer.cpp  BlockSerializer.hpp  BlockSerializer_unittests.cpp  CMakeLists.txt  Class.cpp  ClassLibrary.cpp  ClassLibrary.hpp  DumpSlotJSON.cpp  DumpSlotJSON.hpp  Emitter.cpp  Emitter.hpp  Frame.cpp  Frame.hpp  Generator.cpp  Generator.hpp  GeneratorA64.cpp  GeneratorX64.cpp  HIR.cpp  HIR.hpp  Hash.cpp  Hash.hpp  Heap.cpp  Heap.hpp  Interpreter.cpp  Interpreter.hpp  JIT.hpp  Lexer.hpp  Lexer.rl  Lexer_unittests.cpp  LifetimeAnalyzer.cpp  LifetimeAnalyzer.hpp  (+62 more)
src/hadron/aarch64/: Generator.cpp  Generator.hpp
src/hadron/hir/: AssignHIR.cpp  AssignHIR.hpp  BlockLiteralHIR.cpp  BlockLiteralHIR.hpp  BranchHIR.cpp  BranchHIR.hpp  BranchIfTrueHIR.cpp  BranchIfTrueHIR.hpp  ConstantHIR.cpp  ConstantHIR.hpp  HIR.cpp  HIR.hpp  ImportClassVariableHIR.cpp  ImportClassVariableHIR.hpp  ImportInstanceVariableHIR.cpp  ImportInstanceVariableHIR.hpp  ImportLocalVariableHIR.cpp  ImportLocalVariableHIR.hpp  ImportNameHIR.cpp  ImportNameHIR.hpp  LoadArgumentHIR.cpp  LoadArgumentHIR.hpp  LoadClassVariableHIR.cpp  LoadClassVariableHIR.hpp  LoadFromPointerHIR.cpp  LoadFromPointerHIR.hpp  LoadInstanceVariable.hpp  LoadInstanceVariableHIR.cpp  LoadInstanceVariableHIR.hpp  LoadOuterFrameHIR.cpp  LoadOuterFrameHIR.hpp  MessageHIR.cpp  MessageHIR.hpp  MethodReturnHIR.cpp  MethodReturnHIR.hpp  PhiHIR.cpp  PhiHIR.hpp  ReadFromClassHIR.cpp  ReadFromClassHIR.hpp  ReadFromContextHIR.cpp  (+21 more)
src/hadron/internal/: FileSystem.cpp  FileSystem.hpp
src/hadron/lir/: AssignLIR.hpp  BranchIfTrueLIR.hpp  BranchLIR.hpp  BranchToRegisterLIR.hpp  InterruptLIR.hpp  LIR.cpp  LIR.hpp  LabelLIR.cpp  LabelLIR.hpp  LoadConstantLIR.hpp  LoadFramePointerLIR.hpp  LoadFromFrameLIR.hpp  LoadFromPointerLIR.hpp  LoadFromStackLIR.hpp  LoadImmediateLIR.hpp  PhiLIR.hpp  StoreToFrameLIR.hpp  StoreToPointerLIR.hpp  StoreToStackLIR.hpp
src/include/hadron/: Assembler.hpp  BlockSerializer.hpp  CodeGenerator.hpp  Compiler.hpp  CompilerContext.hpp  Emitter.hpp  ErrorReporter.hpp  Function.hpp  HIR.hpp  Hash.hpp  Interpreter.hpp  JIT.hpp  JITMemoryArena.hpp  Lexer.hpp  Lifetime.hpp  LifetimeAnalyzer.hpp  LifetimeInterval.hpp  LighteningJIT.hpp  LightningJIT.hpp  Literal.hpp  MachineCodeRenderer.hpp  MoveScheduler.hpp  Parser.hpp  RegisterAllocator.hpp  Resolver.hpp  SSABuilder.hpp  Slot.hpp  SyntaxAnalyzer.hpp  ThreadContext.hpp  Token.hpp  Type.hpp  VirtualJIT.hpp
src/internal/: BuildInfo.hpp.in
src/runtime/: CMakeLists.txt  ObjectHeader.hpp  Slot.cpp  Slot.hpp  mod.rs  slot.rs
src/server/: CMakeLists.txt  CompilationUnit.hpp  HadronServer.cpp  HadronServer.hpp  JSONTransport.cpp  JSONTransport.hpp  LSPMethods.cpp.in  LSPMethods.hpp  LSPTypes.hpp
src/toolchain/: cursor.rs  diagnostics.rs  lexer.rs  mod.rs  parser.rs
src/toolchain/diagnostics/: diagnostic_emitter.rs  diagnostic_kind.rs  diagnostics.rs  mod.rs
src/toolchain/lexer/: cursor.rs  mod.rs  token.rs  tokenized_buffer.rs
src/toolchain/parser/: context.rs  mod.rs  node.rs  node_kind.rs  parser.rs  tree.rs
src/toolchain/parser/tree/: handle_class_def.rs  handle_class_def_body.rs  handle_class_def_start.rs
src/toolchain/source/: mod.rs  source_buffer.rs
test/: CMakeLists.txt  GrammarIterator.cpp  GrammarIterator.hpp  GrammarIteratorParser.rl  HLangDClient.py  parser_exhaustive_test.cpp  vistool.py
test/scripts/: IfTrue.scd  IntegerConstant.scd  NilConstant.scd
tests/: CMakeLists.txt  lex.rs
xtask/: Cargo.toml
(+64 files in other folders)
