[package]
name = "hadron_sclang"
version = "0.1.0-alpha.2"
edition = "2021"
license = "Apache-2.0"
description = "Experimental SuperCollider music language interpreter"
homepage = "https://hadron-sclang.org"
repository = "https://github.com/hadron-sclang/hadron"
readme = "README.md"
authors = ["Lucile Rose Nihlen <none>"]
keywords = [ "music", "audio", "synthesis", "language" ]
categories = [ "multimedia", "parser-implementations" ]

[[bin]]
name = "scc"

[dependencies]
const_format = "0.2.31"
mmap-rs = "0.6.0"
pico-args = "0.5.0"
static_assertions = "1.1.0"
