[package]
name = "hadron_sclang-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.hadron_sclang]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "tokenized_buffer"
path = "fuzz_targets/tokenized_buffer.rs"
test = false
doc = false
